--- a/snap-shot-api/Cargo.toml
+++ b/snap-shot-api/Cargo.toml
@@ -6,23 +6,34 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-axum               = "0.7.5"
-serde              = { version = "1.0.188", features = ["derive"] }
-tokio              = { version = "1.32.0", features = ["full"] }
-tower-http         = { version = "0.5.0", features = ["fs", "trace", "cors"] }
-tower              = { version = "0.4", features = ["util"] }
-tracing            = "0.1"
+axum = "0.7.5"
+serde = { version = "1.0.188", features = ["derive"] }
+tokio = { version = "1.32.0", features = ["full"] }
+tower-http = { version = "0.5.0", features = ["fs", "trace", "cors"] }
+tower = { version = "0.4", features = ["util"] }
+tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
-reqwest            = "0.12.4"
-serde_with         = "3.8.1"
-serde_as           = "0.0.1"
-serde_json         = "1.0.117"
-headless_chrome    = "1.0.10"
-image              = "0.25.1"
-futures-util       = "0.3.30"
-short-uuid         = "0.1.2"
-num_cpus           = "1.16.0"
-anyhow             = "1.0.86"
+reqwest = "0.12.4"
+serde_with = "3.8.1"
+serde_as = "0.0.1"
+serde_json = "1.0.117"
+headless_chrome = "1.0.10"
+image = "0.25.1"
+futures-util = "0.3.30"
+short-uuid = "0.1.2"
+num_cpus = "1.16.0"
+anyhow = "1.0.86"
+sqlx = { version = "0.7", default-features = false, features = [
+    "runtime-async-std",
+    "macros",
+    "postgres",
+    "chrono",
+] }
+dotenv = "0.15.0"
+regex = "1.10.5"
+chrono = "0.4.38"
+uuid = "1.9.0"
+
 
 [lib]
 name = "lib"
