--- a/snap-shot-api/Cargo.toml
+++ b/snap-shot-api/Cargo.toml
@@ -6,8 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-axum = "0.7.5"
 serde = { version = "1.0.188", features = ["derive"] }
+uuid = { version = "1.9.0", features = ["v4", "serde"] }
+axum = "0.7.5"
 tokio = { version = "1.32.0", features = ["full"] }
 tower-http = { version = "0.5.0", features = ["fs", "trace", "cors"] }
 tower = { version = "0.4", features = ["util"] }
@@ -28,11 +29,11 @@ sqlx = { version = "0.7", default-features = false, features = [
     "macros",
     "postgres",
     "chrono",
+    "uuid",
 ] }
 dotenv = "0.15.0"
 regex = "1.10.5"
 chrono = "0.4.38"
-uuid = "1.9.0"
 
 
 [lib]
