--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -23,15 +23,18 @@ image = "0.25.1"
 futures-util = "0.3.30"
 anyhow = "1.0.86"
 sqlx = { version = "0.7", default-features = false, features = [
-    "runtime-async-std",
+    "runtime-tokio",
     "macros",
     "postgres",
     "chrono",
     "uuid",
 ] }
+redis = { version = "0.25.1", features = ["tokio-comp"] }
+bb8-redis = { version = "0.15.0" }
 dotenv = "0.15.0"
 regex = "1.10.5"
 chrono = "0.4.38"
+fantoccini = "0.19.3"
 
 
 [lib]
