--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,7 @@ services:
       DB_PORT: 5432
     depends_on:
       - postgres
+      - selenium
   frontend:
     build:
       context: ./fe
@@ -58,5 +59,5 @@ services:
       - "4444:4444"  # Port mapping
       - "7900:7900"  # Port mapping
     environment:
-      - SE_NODE_MAX_SESSIONS=20
-      - SE_NODE_OVERRIDE_MAX_SESSIONS=true
+      - SE_NODE_MAX_SESSIONS=5
+      - SE_NODE_OVERRIDE_MAX_SESSIONS=false
