--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -7,7 +7,6 @@ WORKDIR /usr/src/app
 # Install build dependencies
 RUN apt-get update && apt-get install -y pkg-config libssl-dev
 
-
 # Copy the Cargo.toml and Cargo.lock files
 COPY Cargo.toml Cargo.lock ./
 
@@ -27,6 +26,10 @@ RUN apt-get update \
 
 # Create a non-root user
 RUN adduser --disabled-password --gecos '' appuser
+
+# Create necessary directories and set ownership
+RUN mkdir -p /usr/local/var/snap-shot-api \
+    && chown -R appuser:appuser /usr/local/var/snap-shot-api
 
 # Copy the compiled binary from the builder stage
 COPY --from=builder /usr/src/app/target/release/snap-shot-api /usr/local/bin/snap-shot-api
