--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -38,6 +38,12 @@ fantoccini = "0.19.3"
 lazy_static = "1.5.0"
 
 
+
 [lib]
 name = "lib"
-path = "src/lib/mod.rs"
+path = "src/lib.rs"
+
+
+[[bin]]
+name = "snap-shot-api"
+path = "src/main.rs"
