--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,10 +22,13 @@ services:
       REDIS_PORT: 6379
       SELENIUM_PORT: 4444
       SELENIUM_HOST: selenium
+      ASSETS_FOLDER: ../api-data/app
     depends_on:
       - postgres
       - redis
       - selenium
+    volumes:
+      - ../api-data:/app
   frontend:
     build:
       context: ./fe
