--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+diff_img = { git = "https://github.com/chris-adapt/diff-img" }
 serde = { version = "1.0.188", features = ["derive"] }
 uuid = { version = "1.9.0", features = ["v4", "serde"] }
 axum = "0.7.5"
@@ -36,9 +37,6 @@ regex = "1.10.5"
 chrono = "0.4.38"
 fantoccini = "0.19.3"
 lazy_static = "1.5.0"
-
-
-
 [lib]
 name = "lib"
 path = "src/lib.rs"
