--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,13 +22,13 @@ services:
       REDIS_PORT: 6379
       SELENIUM_PORT: 4444
       SELENIUM_HOST: selenium
-      ASSETS_FOLDER: ../api-data/app
+      ASSETS_FOLDER: /var/lib/snap-shot/data
     depends_on:
       - postgres
       - redis
       - selenium
     volumes:
-      - ../api-data:/app
+      - ../api-data/app:/var/lib/snap-shot/data
   frontend:
     build:
       context: ./fe
