--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -37,6 +37,12 @@ regex = "1.10.5"
 chrono = "0.4.38"
 fantoccini = "0.19.3"
 lazy_static = "1.5.0"
+utoipa = { version = "4.2.3", features = ["chrono", "uuid", "axum_extras"] }
+utoipa-swagger-ui = { version = "7.1.0", features = [
+    "axum",
+    "vendored",
+], default-features = false }
+
 [lib]
 name = "lib"
 path = "src/lib.rs"
