--- a/fe/package.json
+++ b/fe/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "codegen": "openapi-typescript '../api/bindings/api-docs.json' --output 'src/types/generated.ts'"
   },
   "dependencies": {
     "@ant-design/icons": "^5.3.7",
@@ -23,6 +24,7 @@
     "react-toastify": "^10.0.5"
   },
   "devDependencies": {
+    "@graphql-codegen/typescript": "^4.0.9",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^7.15.0",
@@ -33,9 +35,10 @@
     "eslint-plugin-react": "^7.34.3",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "openapi-typescript": "^7.4.0",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.4",
-    "typescript": "^5.2.2",
+    "typescript": "^5.6.2",
     "vite": "^5.2.0",
     "vite-tsconfig-paths": "^4.3.2"
   }
