--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-diff_img = { git = "https://github.com/chris-adapt/diff-img" }
+lcs-image-diff = { git = "https://github.com/chris-o-r/lcs-image-diff-rs" }
 serde = { version = "1.0.188", features = ["derive"] }
 uuid = { version = "1.9.0", features = ["v4", "serde"] }
 axum = "0.7.5"
@@ -35,7 +35,7 @@ bb8-redis = { version = "0.15.0" }
 dotenv = "0.15.0"
 regex = "1.10.5"
 chrono = "0.4.38"
-fantoccini = "0.19.3"
+fantoccini = "0.21.2"
 lazy_static = "1.5.0"
 utoipa = { version = "4.2.3", features = ["chrono", "uuid", "axum_extras"] }
 utoipa-swagger-ui = { version = "7.1.0", features = [
