--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2021"
 lcs-image-diff = { git = "https://github.com/chris-o-r/lcs-image-diff-rs" }
 serde = { version = "1.0.188", features = ["derive"] }
 uuid = { version = "1.9.0", features = ["v4", "serde"] }
-axum = "0.7.5"
+axum = "0.7.9"
 tokio = { version = "1.32.0", features = ["full"] }
 tower-http = { version = "0.5.0", features = ["fs", "trace", "cors"] }
 tower = { version = "0.4", features = ["util"] }
@@ -40,6 +40,8 @@ utoipa-swagger-ui = { version = "7.1.0", features = [
     "axum",
     "vendored",
 ], default-features = false }
+
+validator = { version = "0.19.0", features = ["derive"] }
 
 [lib]
 name = "lib"
