--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -6,7 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+bb8 = "0.9.0"
 lcs-image-diff = { git = "https://github.com/chris-o-r/lcs-image-diff-rs" }
+diff_img = { git = "https://github.com/chris-o-r/diff-img" }
 serde = { version = "1.0.188", features = ["derive"] }
 uuid = { version = "1.9.0", features = ["v4", "serde"] }
 axum = "0.7.9"
@@ -19,7 +21,6 @@ reqwest = "0.12.4"
 serde_with = "3.8.1"
 serde_as = "0.0.1"
 serde_json = "1.0.117"
-headless_chrome = "1.0.10"
 image = "0.25.1"
 futures-util = "0.3.30"
 anyhow = "1.0.86"
