--- a/api/.env.example
+++ b/api/.env.example
@@ -1,6 +1,6 @@
 BASE_URL=0.0.0.0
 PORT=8080
-DB_NAME=mydatabase
+DB_NAME=DB_NAME=snapshots
 DB_USER=myuser
 DB_PASSWORD=mypassword
 DB_HOST=127.0.0.1
