--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -29,6 +29,7 @@ sqlx = { version = "0.7", default-features = false, features = [
     "postgres",
     "chrono",
     "uuid",
+    "migrate"
 ] }
 dotenv = "0.15.0"
 regex = "1.10.5"
