Created FE tests

--- a/api/.vscode/settings.json
+++ b/api/.vscode/settings.json
@@ -1,5 +1,7 @@
-{
-    "cSpell.words": [
-        "pthread"
-    ]
+    {
+    "files.exclude": {
+        ".git": false,
+        "target": true
+
+    }
 }
