--- a/api/.env.example
+++ b/api/.env.example
@@ -1,13 +1,10 @@
 BASE_URL=0.0.0.0
 PORT=8080
-DB_NAME=DB_NAME=snapshots
-DB_USER=myuser
-DB_PASSWORD=mypassword
-DB_HOST=127.0.0.1
-DB_PORT=5432
+
 REDIS_URL=redis://127.0.0.1:6379
 REDIS_PORT=6379
 SELENIUM_PORT=4444
 SELENIUM_HOST=localhost
 ASSETS_FOLDER=./data
-SELENIUM_MAX_INSTANCES=5
+
+DATABASE_URL=postgres://myuser:mypassword@127.0.0.1:5432/snapshots
